--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "declaration": true,
     "module": "commonjs",
-    "outDir": "./dist",
-    "strict": true,
-    "baseUrl": "./",
-    "typeRoots": ["node_modules/@types"],
-    "types": ["node"],
+    "target": "es2017",
+    "lib": ["es2015"],
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "outDir": "bin",
+    "sourceRoot": "src",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*", "src/types/*"]
+    },
     "esModuleInterop": true,
-    "inlineSourceMap": true,
-    "strictPropertyInitialization": false,
-    "resolveJsonModule": true
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
-  "lib": ["es2019"],
-  "include": ["src"]
+  "include": ["src/**/*"]
 }
